--- a/app.json
+++ b/app.json
@@ -1,7 +1,7 @@
 {
   "expo": {
-    "name": "test_otp",
-    "slug": "test_otp",
+    "name": "ReactNativeOTPScreen",
+    "slug": "ReactNativeOTPScreen",
     "version": "1.0.0",
     "orientation": "portrait",
     "icon": "./assets/icon.png",
