--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,28 +1,28 @@
-name: Expo GitHub Action
-  # You may pin to the exact commit or the version.
-  # uses: expo/expo-github-action@6a82be3e3ed85d15c05f90d869db8dc95382aef3
-  uses: expo/expo-github-action@8.1.0
-  with:
-    # Expo CLI version to install
-    expo-version: # optional
-    # If Expo CLI should be cached to speed up installation
-    expo-cache: # optional, default is true
-    # EAS CLI version to install
-    eas-version: # optional
-    # If EAS CLI should be cached to speed up installation
-    eas-cache: # optional, default is true
-    # The package manager used to install the CLIs
-    packager: # optional, default is yarn
-    # If the action should patch the ENOSPC errors
-    patch-watchers: # optional, default is true
-    # Your Expo token, for authentication. (use with secrets)
-    token: # optional
-    # A custom remote cache key to use for EAS CLI.
-    eas-cache-key: # optional
-    # A custom remote cache key to use for Expo CLI.
-    expo-cache-key: # optional
-    # Your Expo username, for authentication.
-    username: # optional
-    # Your Expo password, for authentication. (use with secrets)
-    password: # optional
-          
+on:
+  push:
+    branches:
+      - main
+jobs:
+  update:
+    runs-on: ubuntu-latest
+    steps:
+      - name: 🏗 Setup repo
+        uses: actions/checkout@v3
+
+      - name: 🏗 Setup Node
+        uses: actions/setup-node@v3
+        with:
+          node-version: 18.x
+          cache: yarn
+
+      - name: 🏗 Setup EAS
+        uses: expo/expo-github-action@v8
+        with:
+          eas-version: latest
+          token: ${{ secrets.EXPO_TOKEN }}
+
+      - name: 📦 Install dependencies
+        run: yarn install
+
+      - name: 🚀 Create update
+        run: eas update --auto --non-interactive
