--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -21,8 +21,8 @@ jobs:
           eas-version: latest
           token: ${{ secrets.EXPO_TOKEN }}
 
-      - name: 📦 Install dependencies
+      - name: 📦 Install Dependencies
         run: npm install
 
-      - name: 🚀 Create update
+      - name: 🚀 Create Update
         run: eas update --auto --non-interactive
